# 3d_tiny_render

./: README.md  build.gradle
app/: build.gradle  gmon.out
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/jni/: Android.mk  appcore.cpp  appcore.hpp  figure.cpp  figure.hpp  lamp.cpp  lamp.hpp  main.cpp  model.cpp  model.hpp  moveobject.cpp  moveobject.hpp
app/src/main/jni/tools/: draw.cpp  draw.hpp  matrix.cpp  matrix.hpp  rotation.cpp  rotation.hpp
app/src/main/res/values/: strings.xml
